# brick-breaker

./: .gitignore  Cargo.toml
assets/: atlas.json  atlas.xcf  sounds.json
src/: input.rs  main.rs  menu.rs  render.rs  sound.rs  state.rs  system.rs  util.rs
src/shaders/: box.wgsl
