[package]
name = "brick-breaker"
version = "0.1.0"
edition = "2021"


[dependencies]
wgpu = {version="0.13"}
glam = {version="0.21", features=["bytemuck", "serde"]}
winit = "0.26"
thiserror = "1"
ron = "0.8"
serde = {version = "1", features=["derive"]}
serde_json = "1"
anyhow = "1"
pollster = "0.2"
log = "0.4"
env_logger = "0.9"
bytemuck = {version = "1", features=["derive"]}
image = "0.24"
rodio = "0.16"
rand = "0.8"